Fixed bug